add favicon & meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Phone catalog</title>
+    <title>Phone Store - Смартфони, Планшети, Аксесуари та Гаджети</title>
+    <meta
+      name="description"
+      content="Phone Store - Найкращий вибір смартфонів, планшетів, аксесуарів та інших гаджетів за вигідними цінами. Купуйте сучасні пристрої з доставкою по всій Україні."
+    />
+    <meta
+      name="keywords"
+      content="смартфони, планшети, аксесуари, гаджети, купити смартфон, купити планшет, магазин гаджетів"
+    />
+    <meta name="author" content="Phone Store" />
+    <meta
+      property="og:title"
+      content="Phone Store - Смартфони, Планшети, Аксесуари та Гаджети"
+    />
+    <meta
+      property="og:description"
+      content="Phone Store - Найкращий вибір смартфонів, планшетів, аксесуарів та інших гаджетів за вигідними цінами. Купуйте сучасні пристрої з доставкою по всій Україні."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://fs-mar24-codemafia.github.io/react_phone-store/"
+    />
+    <meta
+      property="og:image"
+      content="https://fs-mar24-codemafia.github.io/react_phone-store/promo/banner-phones.png"
+    />
+    <meta property="og:site_name" content="Phone Store" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Phone Store - Смартфони, Планшети, Аксесуари та Гаджети"
+    />
+    <meta
+      name="twitter:description"
+      content="Phone Store - Найкращий вибір смартфонів, планшетів, аксесуарів та інших гаджетів за вигідними цінами. Купуйте сучасні пристрої з доставкою по всій Україні."
+    />
+    <meta
+      name="twitter:image"
+      content="https://fs-mar24-codemafia.github.io/react_phone-store/promo/banner-tablets.png"
+    />
+    <meta name="twitter:site" content="@phonestore" />
+    <link rel="icon" href="icons/favicon.png" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
