--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Phone Store - Смартфони, Планшети, Аксесуари та Гаджети</title>
+    <title>Phone Store - Smartphones, Tablets, Accessories, and Gadgets</title>
     <meta
       name="description"
-      content="Phone Store - Найкращий вибір смартфонів, планшетів, аксесуарів та інших гаджетів за вигідними цінами. Купуйте сучасні пристрої з доставкою по всій Україні."
+      content="Phone Store - The best selection of smartphones, tablets, accessories, and other gadgets at great prices. Buy modern devices with delivery across Ukraine."
     />
     <meta
       name="keywords"
-      content="смартфони, планшети, аксесуари, гаджети, купити смартфон, купити планшет, магазин гаджетів"
+      content="smartphones, tablets, accessories, gadgets, buy smartphone, buy tablet, gadget store"
     />
     <meta name="author" content="Phone Store" />
     <meta
       property="og:title"
-      content="Phone Store - Смартфони, Планшети, Аксесуари та Гаджети"
+      content="Phone Store - Smartphones, Tablets, Accessories, and Gadgets"
     />
     <meta
       property="og:description"
-      content="Phone Store - Найкращий вибір смартфонів, планшетів, аксесуарів та інших гаджетів за вигідними цінами. Купуйте сучасні пристрої з доставкою по всій Україні."
+      content="Phone Store - The best selection of smartphones, tablets, accessories, and other gadgets at great prices. Buy modern devices with delivery across Ukraine."
     />
     <meta property="og:type" content="website" />
     <meta
@@ -34,17 +34,18 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Phone Store - Смартфони, Планшети, Аксесуари та Гаджети"
+      content="Phone Store - Smartphones, Tablets, Accessories, and Gadgets"
     />
     <meta
       name="twitter:description"
-      content="Phone Store - Найкращий вибір смартфонів, планшетів, аксесуарів та інших гаджетів за вигідними цінами. Купуйте сучасні пристрої з доставкою по всій Україні."
+      content="Phone Store - The best selection of smartphones, tablets, accessories, and other gadgets at great prices. Buy modern devices with delivery across Ukraine."
     />
     <meta
       name="twitter:image"
       content="https://fs-mar24-codemafia.github.io/react_phone-store/promo/banner-tablets.png"
     />
     <meta name="twitter:site" content="@phonestore" />
+
     <link rel="icon" href="icons/favicon.png" type="image/png" />
   </head>
   <body>
