rename title & meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,25 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Phone Store - Smartphones, Tablets, Accessories, and Gadgets</title>
+    <title>
+      Gadgets Depot - Smartphones, Tablets, Accessories, and Gadgets
+    </title>
     <meta
       name="description"
-      content="Phone Store - The best selection of smartphones, tablets, accessories, and other gadgets at great prices. Buy modern devices with delivery across Ukraine."
+      content="Gadgets Depot - The best selection of smartphones, tablets, accessories, and other gadgets at great prices. Buy modern devices with delivery across Ukraine."
     />
     <meta
       name="keywords"
       content="smartphones, tablets, accessories, gadgets, buy smartphone, buy tablet, gadget store"
     />
-    <meta name="author" content="Phone Store" />
+    <meta name="author" content="Gadgets Depot" />
     <meta
       property="og:title"
-      content="Phone Store - Smartphones, Tablets, Accessories, and Gadgets"
+      content="Gadgets Depot - Smartphones, Tablets, Accessories, and Gadgets"
     />
     <meta
       property="og:description"
-      content="Phone Store - The best selection of smartphones, tablets, accessories, and other gadgets at great prices. Buy modern devices with delivery across Ukraine."
+      content="Gadgets Depot - The best selection of smartphones, tablets, accessories, and other gadgets at great prices. Buy modern devices with delivery across Ukraine."
     />
     <meta property="og:type" content="website" />
     <meta
@@ -30,15 +32,15 @@
       property="og:image"
       content="https://fs-mar24-codemafia.github.io/react_phone-store/promo/banner-phones.png"
     />
-    <meta property="og:site_name" content="Phone Store" />
+    <meta property="og:site_name" content="Gadgets Depot" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Phone Store - Smartphones, Tablets, Accessories, and Gadgets"
+      content="Gadgets Depot - Smartphones, Tablets, Accessories, and Gadgets"
     />
     <meta
       name="twitter:description"
-      content="Phone Store - The best selection of smartphones, tablets, accessories, and other gadgets at great prices. Buy modern devices with delivery across Ukraine."
+      content="Gadgets Depot - The best selection of smartphones, tablets, accessories, and other gadgets at great prices. Buy modern devices with delivery across Ukraine."
     />
     <meta
       name="twitter:image"
