--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
     />
     <meta name="twitter:site" content="@phonestore" />
 
-    <link rel="icon" href="icons/favicon.png" type="image/png" />
+    <link rel="icon" href="icons/favicon.webp" type="image/png" />
   </head>
   <body>
     <div id="root"></div>
